[Vivek] fix layout bugs in home

--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -24,12 +24,13 @@ $chip-color: #333;
     font-size: 1rem;
     position: relative;
       padding: 0 .5em;
+      margin-bottom: 2em;
       &:after {
         content: "";
         position: absolute;
         bottom: 0;
-        left: 0;
-        width: 100%;
+        left: 10%;
+        width: 80%;
         height: 40%;
         background-color: #eee;
         z-index: -10;
@@ -174,7 +175,7 @@ $chip-color: #333;
 
 #cards-container{
     // min-height: 600px;
-    margin-top: 50px;
+    // margin-top: 20px;
 }
 
 .tinyletter-button{
